--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -157,15 +157,18 @@ input.largeCheckbox {
     width: 100%;
 }
 
+#cards.container-fluid {
+  margin-top: 10px;
+  margin-left: 40px;
+  width: 100%;
+  min-width: 280px;
+}
+
 .card {
   margin-top: 15px;
   border: 2px solid #000;
 }
 
-.card-deck {
-  margin-left: auto;
-  margin-right: auto;
-}
 
 #card.card {
   max-width: 320px;
@@ -176,6 +179,11 @@ input.largeCheckbox {
   width: 100%;
 }
 
+#shopCard.card{
+  z-index: 0;
+  margin: 5px;
+}
+
 #shopCard.card-header {
   font-size: 16px;
   background-color: #808080;
@@ -183,8 +191,7 @@ input.largeCheckbox {
 
 .card-block {
     width: 300px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 10px;
 }
 
 // discography page table
@@ -212,7 +219,7 @@ table {
     margin-bottom: 90px;
     /* keeps sticky footer from covering content in sidebar */
     margin-top: 15px;
-    margin-left: 15px;
+    margin-left: 10px;
     margin-right: 10px;
     z-index: 0;
     /* Stay on top */
@@ -255,12 +262,6 @@ audio.controls {
     width: auto;
     max-width: 260px;
 }
-
-#cards.container-fluid {
-  width: 100%;
-  min-width: 280px;
-}
-
 
 #invoiceForm label{
     margin-top: 0px;
@@ -364,8 +365,58 @@ audio.controls {
         -webkit-mask-position: left top, left bottom;
     }
 }
+
+// small mobile phones
+@media screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape) {
+//     // col-sm
+        #sidebar {
+        position: relative;
+        width: 100%;
+        columns: 3;
+        max-height: 480px;
+    }
+
+    #content {
+        position: relative;
+        columns: 1;
+        padding: 15px;
+
+    }
+
+    .navbar {
+      columns: 1;
+    }
+
+    .header {
+      columns: 1;
+      height: 100px;
+    }
+
+    #newLP {
+        width: auto;
+        max-width:240 ;
+    }
+
+    #calendar {
+        max-width: 260px;
+    }
+
+    #shoes {
+        margin-top: -100px;
+    }
+
+    #footer {
+        position: fixed;
+        columns: 1;
+        font-size: 12px;
+        padding: 12px;
+        width: 100%;
+        margin-bottom: 0;
+    }
+}
+
 // larger mobile phones
-@media screen and (max-width: 576px) and (orientation: landscape) {
+@media screen and (max-width: 569px) and (orientation: landscape) {
 //     // col-sm
         #sidebar {
         position: relative;
@@ -413,7 +464,7 @@ audio.controls {
     }
 }
 // // tablets
-@media screen and (min-width: 577px) and (max-width: 768px) and (orientation: landscape) {
+@media screen and (min-width: 577px) and (max-width: 767px) and (orientation: landscape) {
 //     // col-md
     #sidebar {
         position: relative;
@@ -463,26 +514,20 @@ audio.controls {
 }
 
 /* laptops */
-@media screen and (min-width: 769px) and (max-width: 992px) and (orientation: landscape) {
-//     //col-lg
+@media screen and (min-width: 768px) and (max-width: 992px) and (orientation: landscape) {
+    //col-lg
     #sidebar {
-      position: relative;
-      width: 100%;
-      columns: 2;
-      height: auto;
-      margin-left: 15px;
-      margin-right: 15px;
-      margin-bottom: 0;
+        position: relative;
+        width: 100%;
+        columns: 2;
+        height: 520px;
+        margin-left: 15px;
+        margin-right: 15px;
     }
 
     #content {
         position: relative;
         columns: 1;
-
-    }
-
-    h5 {
-      font-size: 20px;
     }
 
     .jumbotron {
@@ -491,6 +536,11 @@ audio.controls {
 
     .navbar {
       columns: 1;
+    }
+
+
+    h5 {
+      font-size: 20px;
     }
 
     #shoes {
